--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/composition";
 @import "components/hamburger";
 @import "components/mobilenav";
+@import "components/card-flip";
 @import "components/frame";
 @import "layout/header";
 @import "layout/digital";
