--- a/sass/components/_card-sub.scss
+++ b/sass/components/_card-sub.scss
@@ -1,20 +1,18 @@
 .card {
     display: inline-flex;
-    border: 1px solid rgba($color: $color-dark, $alpha: 1);
-    background-color: rgba($color: $color-white, $alpha: .1);
-    width: 45rem;
-    height: 25rem;
+    width: 55rem;
+    height: 7rem;
     flex-flow: column;
     justify-content: space-between;
 
     &-heading {
         display: flex;
         justify-content: center;
-        margin-top: 2rem;
+        margin-top: 0rem;
 
         & .card-heading {
-            font-size: 3rem;
-            color: $color-dark;
+            font-size: 3.5rem;
+            color: $color-white;
 
             & p {
                 display: inline-block;
@@ -31,65 +29,10 @@
             padding: 0 1rem 0 1rem;
             text-align: center;
             font-weight: 800;
-            font-size: 1.1rem;
-            color: $color-dark;
+            font-size: 1.3rem;
+            color: $color-white;
         }
 
     }
 
-    &-foot {
-        display: flex;
-        justify-self: end;
-        justify-content: center;
-        margin-bottom: 2rem;
-    }
-}
-
-
-
-@media only screen and (max-width: 1260px) {
-    .card {
-
-        width: 40rem;
-        height: 20rem;
-
-
-        &-heading {
-
-            margin-top: 2rem;
-
-            & .card-heading {
-                font-size: 2.2rem;
-
-
-            }
-        }
-
-        &-main {
-
-
-            & .card-main {
-                padding: 0 1rem 0 1rem;
-
-                font-weight: 800;
-                font-size: .9rem;
-
-            }
-
-        }
-
-        &-foot {
-
-            margin-bottom: 2rem;
-        }
-    }
-
-}
-
-@media only screen and (max-width: 767px) {
-    .card {
-
-        width: 40rem;
-        height: 30rem;
-    }
 }
