--- a/sass/components/_frame.scss
+++ b/sass/components/_frame.scss
@@ -1,31 +1,75 @@
 .frame {
     position: relative;
     width: 500px;
-    height: 500px;
-    background-color: grey;
+    height: 300px;
+
 
     &-pic {
         width: 180px;
         height: 180px;
-        border: solid $color-dark 10px;
-
+        border: solid $color-dark 5px;
+        transition: all .3s;
         position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         &-1 {
             left: 0;
-            background-color: blue;
+
+            &:hover p:after {
+                content: "lorem asd qwe dfasdd dasd";
+            }
         }
 
         &-2 {
             top: 50px;
             left: 150px;
-            background-color: red;
+
+            &:hover p:after {
+                content: "lorem asd qwe dfasdd dasd";
+            }
         }
 
         &-3 {
             top: 25px;
-            background-color: green;
-            right: 0;
+
+            right: 20px;
+
+            &:hover p:after {
+                content: "lorem asd qwe dfasdd dasd";
+            }
+        }
+
+        &:hover {
+            background-color: $color-dark;
+            transform: scale(1.1) translateY(-1rem);
+            box-shadow: 0 2.5rem 4rem rgba($color: $color-black, $alpha: .5);
+            z-index: 11;
+
+            & p {
+                color: white;
+                font-size: 1.1rem;
+
+                & span {
+                    display: none;
+                }
+            }
+        }
+
+    }
+
+    &-text {
+        font-weight: 800;
+        font-size: 1.4rem;
+        display: inline-block;
+        text-align: center;
+
+        & span {
+            display: inline-block;
+            text-align: center;
         }
     }
+
+
 }
