--- a/sass/layout/_digital.scss
+++ b/sass/layout/_digital.scss
@@ -1,5 +1,20 @@
 .digital {
     padding-top: 2.2rem;
-    height: 500px;
+    padding-bottom: 10rem;
+
     background-color: $color-white;
+
+    &-text-absatz {
+        margin-bottom: 1rem;
+        display: inline-block;
+        text-align: left;
+        font-size: 1.2rem;
+    }
+
+    &-text-header {
+        margin-top: 13rem;
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+        letter-spacing: 3px;
+    }
 }
