--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: .3rem;
     overflow: hidden;
@@ -630,7 +631,7 @@ body {
     width: 180px;
     height: 180px;
     border: solid #263238 5px;
-    transition: all .3s;
+    transition: all .2s;
     position: absolute;
     display: flex;
     align-items: center;
@@ -651,7 +652,7 @@ body {
         content: "lorem asd qwe dfasdd dasd"; }
     .frame-pic:hover {
       background-color: #263238;
-      transform: scale(1.1) translateY(-1rem);
+      transform: scale(1.08) translateY(-0.4rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 11; }
       .frame-pic:hover p {
@@ -746,3 +747,27 @@ body {
   .wrapper {
     margin-left: 2rem;
     margin-right: 2rem; } }
+
+.boxes {
+  padding-top: 2.2rem;
+  height: 1200px; }
+
+.box {
+  flex-direction: column;
+  align-items: center;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform .4s ease;
+  height: 70vh; }
+  .box-1 {
+    background-color: #f7d147; }
+  .box-2 {
+    background-color: #263238;
+    color: white; }
+  .box-3 {
+    background-color: #c1c1c1; }
+  .box-4 {
+    background-color: rgba(193, 193, 193, 0.5); }
+
+.scale-in {
+  transform: scaleX(1); }
