--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,9 +11,11 @@
 @import "components/mobilenav";
 @import "components/card-flip";
 @import "components/frame";
+@import "components/faqslider";
 @import "layout/header";
 @import "layout/digital";
 @import "layout/bim5d";
 @import "layout/überuns";
 @import "layout/grid";
 @import "layout/boxes";
+@import "layout/faq";
