--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
   box-sizing: inherit; }
 
 html {
-  scroll-behavior: smooth;
   font-size: 94%; }
 
 body {
@@ -28,7 +27,7 @@ body {
 .heading-1 {
   margin-bottom: 9rem;
   opacity: 0;
-  font-size: 6rem;
+  font-size: 4rem;
   transform: translateY(10rem);
   transition: transform 1s, opacity 1s;
   line-height: 7rem; }
@@ -190,8 +189,7 @@ body {
   z-index: 10;
   top: 2rem;
   left: 3.2rem;
-  position: fixed;
-  width: 400px; }
+  position: fixed; }
   .navlogo .stroke-white {
     stroke: white; }
   .navlogo .animatestroke {
@@ -238,14 +236,14 @@ body {
 .loader {
   width: 30px;
   height: 30px;
-  border: 4px solid #Fff;
+  border: 4px solid #263238;
   animation: loader 2s infinite ease; }
 
 .loader-inner {
   vertical-align: top;
   display: inline-block;
   width: 100%;
-  background-color: #fff;
+  background-color: #f7d147;
   animation: loader-inner 2s infinite ease-in; }
 
 @keyframes loader {
@@ -534,7 +532,7 @@ body {
   perspective: 100rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 40rem;
+  height: 30rem;
   width: 24rem; }
   .flip__side {
     height: 40rem;
@@ -542,6 +540,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -570,21 +569,21 @@ body {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
     .flip__picture-1 {
-      background-image: linear-gradient(to right bottom, #f7d147, #fff), url(../img/unnamed.jpg); }
+      background-image: linear-gradient(to right bottom, #f7d147, #263238), url(../img/unnamed.jpg); }
     .flip__picture-2 {
-      background-image: linear-gradient(to right bottom, #f7d147, #fff), url(../img/unnamed.jpg); }
+      background-image: linear-gradient(to right bottom, #f7d147, #263238), url(../img/unnamed.jpg); }
     .flip__picture-3 {
-      background-image: linear-gradient(to right bottom, #f7d147, #fff), url(../img/unnamed.jpg); }
+      background-image: linear-gradient(to right bottom, #f7d147, #263238), url(../img/unnamed.jpg); }
   .flip__heading {
     font-size: 1.8rem;
     font-weight: 300;
     text-transform: uppercase;
-    color: #fff;
+    color: #263238;
     position: absolute;
     top: 12rem;
-    right: 2rem;
+    right: 0rem;
     text-align: right;
-    width: 75%; }
+    width: 100%; }
   .flip__heading--span {
     padding: 1rem 2.5rem;
     -webkit-box-decoration-break: clone;
@@ -595,16 +594,6 @@ body {
       background-image: linear-gradient(to right bottom, rgba(247, 209, 71, 0.7), rgba(255, 255, 255, 0.7)); }
     .flip__heading--span--3 {
       background-image: linear-gradient(to right bottom, rgba(247, 209, 71, 0.7), rgba(255, 255, 255, 0.7)); }
-  .flip__details ul {
-    list-style: none;
-    width: 80%;
-    margin: 0 auto; }
-    .flip__details ul li {
-      text-align: center;
-      font-size: 1.1rem;
-      padding: 1rem; }
-      .flip__details ul li:not(:last-child) {
-        border-bottom: 1px solid #eee; }
   .flip__cta {
     position: absolute;
     top: 50%;
@@ -615,12 +604,13 @@ body {
   .flip__price-box {
     text-align: center;
     margin-bottom: 8rem;
-    color: white; }
+    color: #263238; }
   .flip__price-only {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-transform: uppercase; }
   .flip__price-value {
-    font-size: 6rem;
+    margin-top: 4rem;
+    font-size: 1.2rem;
     font-weight: 150; }
 
 .frame {
@@ -669,6 +659,62 @@ body {
       display: inline-block;
       text-align: center; }
 
+.faqslide {
+  outline: 2px solid #263238;
+  outline-offset: .4rem;
+  background-color: #263238;
+  display: inline-block;
+  font-weight: 800;
+  text-decoration: none;
+  padding: .1rem 2.2rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  width: 80%;
+  margin-bottom: 2rem; }
+  .faqslide > p {
+    margin-left: 3rem;
+    display: inline;
+    font-size: 1.5rem;
+    font-weight: 100; }
+    .faqslide > p:after {
+      color: transparent;
+      transition: all 1s; }
+  .faqslide > h3 {
+    display: inline;
+    font-size: 2.5rem;
+    font-weight: 100; }
+  .faqslide:hover p:after {
+    content: "lorem asd qwe dfasdd dasd";
+    color: #263238; }
+  .faqslide:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 130%;
+    height: 100%;
+    transform-origin: 0 0;
+    transform: translateX(-100%) skewX(-45deg);
+    background-color: #f7d147;
+    transition: all .3s;
+    z-index: -1; }
+  .faqslide:hover {
+    color: #263238; }
+    .faqslide:hover:before {
+      transform: translateX(0) skewX(-45deg); }
+    .faqslide:hover > p > span {
+      display: none; }
+
+@media only screen and (max-width: 980px) {
+  .faqslide {
+    font-size: .8rem; } }
+
 .header {
   height: 100vh;
   display: block;
@@ -685,6 +731,7 @@ body {
 .digital {
   padding-top: 2.2rem;
   padding-bottom: 10rem;
+  height: 100vh;
   background-color: #fff; }
   .digital-text-absatz {
     margin-bottom: 1rem;
@@ -700,11 +747,11 @@ body {
 .bim5d {
   padding-top: 2.2rem;
   background-color: #fff;
-  padding-bottom: 10rem; }
+  height: 100vh; }
 
 .wir {
   padding-top: 2.2rem;
-  height: 1200px;
+  height: 100vh;
   background-color: #263238;
   background-image: url(../img/cube2.svg);
   background-size: 200px; }
@@ -750,7 +797,7 @@ body {
 
 .boxes {
   padding-top: 2.2rem;
-  height: 1200px; }
+  height: 100vh; }
 
 .box {
   flex-direction: column;
@@ -771,3 +818,6 @@ body {
 
 .scale-in {
   transform: scaleX(1); }
+
+#faq {
+  height: 1000px; }
