--- a/sass/layout/_digital.scss
+++ b/sass/layout/_digital.scss
@@ -1,7 +1,7 @@
 .digital {
     padding-top: 2.2rem;
     padding-bottom: 10rem;
-
+    height: 100vh;
     background-color: $color-white;
 
     &-text-absatz {
