--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,11 +37,20 @@ body {
 .wrapper {
     margin-left: 15rem;
     margin-right: 15rem;
+    z-index: 10;
+    height: 100%;
+}
+
+section {
+    padding-top: 1.85rem;
 }
 
 
-
-
+@media only screen and (max-height: 800px) {
+    section {
+        height: 800px !important;
+    }
+}
 
 
 .heading-1 {
@@ -51,6 +60,7 @@ body {
     transform: translateY(10rem);
     transition: transform 1s, opacity 1s;
     line-height: 7rem;
+    z-index: 10;
 
     &.active-dark {
         color: $color-dark;
