--- a/sass/components/_card-sub.scss
+++ b/sass/components/_card-sub.scss
@@ -4,6 +4,7 @@
     height: 7rem;
     flex-flow: column;
     justify-content: space-between;
+    margin-top: 20rem;
 
     &-heading {
         display: flex;
