--- a/sass/layout/_bim5d.scss
+++ b/sass/layout/_bim5d.scss
@@ -1,7 +1,4 @@
 .bim5d {
-    padding-top: 2.2rem;
-    background-color: $color-white;
+    background-color: rgba($color: $color-light, $alpha: .2);
     height: 100vh;
-
-
 }
