--- a/sass/layout/_überuns.scss
+++ b/sass/layout/_überuns.scss
@@ -1,8 +1,7 @@
 .wir {
-    padding-top: 2.2rem;
     height: 100vh;
-    background-color: $color-dark;
-    background-image: url(../img/cube2.svg);
-    background-size: 200px;
+    // background-color: $color-dark;
+    // background-image: url(../img/cube2.svg);
+    // background-size: 200px;
 
 }
