--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
 @import "components/card-flip";
 @import "components/frame";
 @import "components/faqslider";
+@import "components/slide-card";
+@import "components/contact";
 @import "layout/header";
 @import "layout/digital";
 @import "layout/bim5d";
@@ -19,3 +21,4 @@
 @import "layout/grid";
 @import "layout/boxes";
 @import "layout/faq";
+@import "layout/footer";
