--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: $header-height-full;
+    height: 100px;
     width: 100%;
     z-index: -1;
     opacity: 0.6;
