--- a/sass/components/_frame.scss
+++ b/sass/components/_frame.scss
@@ -7,18 +7,19 @@
     &-pic {
         width: 180px;
         height: 180px;
-        border: solid $color-dark 5px;
+        border: solid $color-dark 3px;
         transition: all .2s;
         position: absolute;
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0 1rem 0 1rem;
 
         &-1 {
             left: 0;
 
             &:hover p:after {
-                content: "lorem asd qwe dfasdd dasd";
+                content: "Die digitale Zukunft der Baubranche";
             }
         }
 
@@ -27,7 +28,7 @@
             left: 150px;
 
             &:hover p:after {
-                content: "lorem asd qwe dfasdd dasd";
+                content: "Umsetzung aller BIM-Dimensionen";
             }
         }
 
@@ -37,7 +38,7 @@
             right: 20px;
 
             &:hover p:after {
-                content: "lorem asd qwe dfasdd dasd";
+                content: "Visualisierungen aller Art";
             }
         }
 
