--- a/sass/components/_mobilenav.scss
+++ b/sass/components/_mobilenav.scss
@@ -101,7 +101,7 @@ $button-width: 35px;
         height: 70%;
         top: 50%;
         transform: translateY(-50%);
-        font-size: 50px;
+        font-size: 35px;
         text-align: center;
     }
 
@@ -115,8 +115,8 @@ $button-width: 35px;
 
         li {
             display: block;
-            height: 25%;
-            height: calc(100% / 4);
+            height: 15%;
+            height: calc(100% / 6);
             min-height: 50px;
             position: relative;
             opacity: 0;
@@ -127,6 +127,8 @@ $button-width: 35px;
                 color: $color-primary;
                 text-decoration: none;
                 overflow: hidden;
+                backface-visibility: hidden;
+                -webkit-backface-visibility: hidden;
 
                 &:hover:after,
                 &:focus:after,
