--- a/sass/layout/_boxes.scss
+++ b/sass/layout/_boxes.scss
@@ -1,34 +1,113 @@
 .boxes {
-    padding-top: 2.2rem;
     height: 100vh;
+    position: relative;
+
+    &-cap-heading {
+        position: absolute;
+    }
+
+}
+
+.boxwrap {
+    display: flex;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
 }
 
 .box {
-    flex-direction: column;
-    align-items: center;
+    z-index: 1;
+    display: block;
     transform-origin: left;
     transform: scaleX(0);
     transition: transform .4s ease;
-    height: 70vh;
+    height: 100%;
+    padding-top: 10rem;
 
-    &-1 {
-        background-color: $color-primary;
+    & h2 {
+        height: 6rem;
+        padding: 0 4rem 0 5rem;
     }
 
-    &-2 {
-        background-color: $color-dark;
-        color: white;
+    & p {
+        padding: 0 4rem 0 5rem;
     }
 
-    &-3 {
-        background-color: $color-light;
+    & h1 {
+        padding: 0 4rem 0 5rem;
+        font-size: 6rem;
+        font-weight: 100;
     }
 
     &-4 {
-        background-color: rgba($color: $color-light, $alpha: .5)
+        background-color: $color-primary;
+    }
+
+    &-3 {
+        background-color: rgba($color: $color-dark, $alpha: .8);
+        color: white;
+    }
+
+    &-2 {
+        background-color: $color-light;
+    }
+
+    &-1 {
+        background-color: rgba($color: $color-light, $alpha: .5);
+
+        & h2 {
+            height: 6rem;
+            padding: 0 4rem 0 10rem;
+        }
+
+        & p {
+            padding: 0 4rem 0 10rem;
+        }
+
+        & h1 {
+            padding: 0 4rem 0 10rem;
+            font-size: 6rem;
+            font-weight: 100;
+        }
     }
 }
 
 .scale-in {
     transform: scaleX(1);
+}
+
+
+
+
+@media only screen and (max-width: 1500px) {
+    .boxwrap .flex-grid {
+        display: block;
+        padding-top: 10rem;
+    }
+
+    .box {
+        height: 25%;
+        padding-top: 1rem;
+
+
+        & h2 {
+            font-size: 1.2rem;
+            display: inline-block;
+            height: 0;
+            padding: 0 4rem 0 0;
+        }
+
+        & p {
+            padding: 0 4rem 0 15rem;
+        }
+
+        & h1 {
+            display: inline-block;
+            padding: 0 4rem 0 15rem;
+            font-size: 2.5rem;
+            font-weight: 100;
+        }
+    }
+
 }
